<resources>
    <string name="app_name">CarSetup</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="home"></string>
    <string name="tasks"></string>
    <string name="add"></string>
    <string name="notifications"></string>
    <string name="settings"></string>
    <string name="title_activity_car_search">CarSearch</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--
    <string-array name="dropmenuarray">
        <item>Version</item>
        <item>Theme</item>
    </string-array>
    -->
</resources>