<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/task"
        android:title="@string/tasks" />

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/add"
        android:title="@string/add" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification"
        android:title="@string/notifications" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/setting"
        android:title="@string/settings" />

</menu>